--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -22,8 +22,10 @@
     padding: none;
     margin: none;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 8px 8px 0 0;
 }
 
 #toDoList {
     box-shadow: rgba(0, 0, 0, 0.35) 0px -5px 15px;
+    border-radius: 0 0 8px 8px;
 }
