--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -28,4 +28,6 @@
 #toDoList {
     box-shadow: rgba(0, 0, 0, 0.35) 0px -5px 15px;
     border-radius: 0 0 8px 8px;
+    padding: 0.5rem;
+    text-align: center;
 }
