--- a/src/components/ToDoInput/ToDoInput.css
+++ b/src/components/ToDoInput/ToDoInput.css
@@ -19,7 +19,7 @@
 #saveBtn {
     border: 2px solid #232529a8;
     border-radius: 5px;
-    background-image: linear-gradient(to right, #DD5E89 0%, #F7BB97 51%, #DD5E89 100%);
+    background: linear-gradient(to right, #DD5E89 0%, #F7BB97 51%, #DD5E89 100%);
     margin: 1rem 1rem 1rem 0;
     padding: 15px 25px;
     text-transform: uppercase;
