--- a/src/components/ToDo/ToDo.css
+++ b/src/components/ToDo/ToDo.css
@@ -14,6 +14,10 @@
     color: #e8eaed;
     font-size: 1rem;
     padding: 0 0.5rem;
+    white-space: normal;
+    word-wrap: wrap;
+    word-break: break-word;
+    text-align: start;
 }
 
 #toDo button {
@@ -22,21 +26,14 @@
     border-radius: 90px;
     margin: none;
     padding: none;
-
+    cursor: pointer;
+    color: #e8eaed;
 }
 
 #toDo span {
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-#delete {
-    color: #e8eaed;
-}
-
-#check {
-    color: #e8eaed;
 }
 
 #delete:hover {
