some visual changes and update readme

--- a/src/components/ToDoInput/ToDoInput.css
+++ b/src/components/ToDoInput/ToDoInput.css
@@ -3,7 +3,7 @@
     justify-content: space-around;
 }
 
-#Box #todo {
+#todo {
     background-color: #343a40;
     border: 2px solid #232529a8;
     border-radius: 5px;
